# backend/api/gen/go/authentication/service/v1/authentication.pb.redact.go
@@ -159,6 +159,28 @@ func (s *redactedAuthenticationServiceServer) WhoAmI(ctx context.Context, in *em
 	return res, err
 }
 
+// GenerateCaptcha is the redacted wrapper for the actual AuthenticationServiceServer.GenerateCaptcha method
+// Unary RPC
+func (s *redactedAuthenticationServiceServer) GenerateCaptcha(ctx context.Context, in *emptypb.Empty) (*GenerateCaptchaResponse, error) {
+	res, err := s.srv.GenerateCaptcha(ctx, in)
+	if !s.bypass.CheckInternal(ctx) {
+		// Apply redaction to the response
+		redact.Apply(res)
+	}
+	return res, err
+}
+
+// VerifyCaptcha is the redacted wrapper for the actual AuthenticationServiceServer.VerifyCaptcha method
+// Unary RPC
+func (s *redactedAuthenticationServiceServer) VerifyCaptcha(ctx context.Context, in *VerifyCaptchaRequest) (*VerifyCaptchaResponse, error) {
+	res, err := s.srv.VerifyCaptcha(ctx, in)
+	if !s.bypass.CheckInternal(ctx) {
+		// Apply redaction to the response
+		redact.Apply(res)
+	}
+	return res, err
+}
+
 // Redact method implementation for LoginRequest
 func (x *LoginRequest) Redact() string {
 	if x == nil {
@@ -374,5 +396,39 @@ func (x *RevokeTokenByIdRequest) Redact() string {
 	// Safe field: Reason
 
 	// Safe field: UserId
+	return x.String()
+}
+
+// Redact method implementation for GenerateCaptchaResponse
+func (x *GenerateCaptchaResponse) Redact() string {
+	if x == nil {
+		return ""
+	}
+
+	// Safe field: CaptchaId
+
+	// Safe field: ImageBase64
+	return x.String()
+}
+
+// Redact method implementation for VerifyCaptchaRequest
+func (x *VerifyCaptchaRequest) Redact() string {
+	if x == nil {
+		return ""
+	}
+
+	// Safe field: CaptchaId
+
+	// Safe field: UserInput
+	return x.String()
+}
+
+// Redact method implementation for VerifyCaptchaResponse
+func (x *VerifyCaptchaResponse) Redact() string {
+	if x == nil {
+		return ""
+	}
+
+	// Safe field: Valid
 	return x.String()
 }
