# backend/app/admin/service/cmd/server/wire_gen.go
@@ -65,7 +65,8 @@ func initApp(context *bootstrap.Context) (*kratos.App, func(), error) {
 	userCredentialRepo := data.NewUserCredentialRepo(context, entClient, crypto)
 	tenantRepo := data.NewTenantRepo(context, entClient)
 	orgUnitRepo := data.NewOrgUnitRepo(context, entClient)
-	authenticationService := service.NewAuthenticationService(context, userRepo, userCredentialRepo, roleRepo, tenantRepo, membershipRepo, orgUnitRepo, permissionRepo, authenticator, clientType)
+	captcha := data.NewCaptcha(client)
+	authenticationService := service.NewAuthenticationService(context, userRepo, userCredentialRepo, roleRepo, tenantRepo, membershipRepo, orgUnitRepo, permissionRepo, authenticator, clientType, captcha)
 	loginPolicyRepo := data.NewLoginPolicyRepo(context, entClient)
 	loginPolicyService := service.NewLoginPolicyService(context, loginPolicyRepo)
 	menuRepo := data.NewMenuRepo(context, entClient)
